data/derived/sp14/progs/unify/prog4540.ml.out
Characters 80-81:
  0, bigAdd value x :: snd a in 
                  ^
Error: This expression has type int but an expression was expected of type
         int list
